--- a/server/compose.yaml
+++ b/server/compose.yaml
@@ -22,6 +22,7 @@ services:
       SERVER_URL: http://server:8111/
     volumes:
       - ./agent/:/data/teamcity_agent/conf/:rw
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     depends_on:
       server:
         condition: service_healthy
